<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28FFFFFF"
    tools:context=".home_page">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/back"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <AutoCompleteTextView
          android:id="@+id/dish"
          android:layout_width="0dp"
          android:layout_height="50dp"
          android:layout_weight="5"
          android:hint="@string/search"
          android:textColor="#FFFFFF"
          android:textColorHint="#FFFFFF" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beverages"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="#51120E0E"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bev_1" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bev_2" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bev3" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bev4" />
        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bev5" />
        <ImageView
          android:id="@+id/imageView12"
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:layout_weight="1"
          android:contentDescription="@string/todo"
          android:padding="10dp"
          android:scaleType="fitXY"
          app:srcCompat="@drawable/bev6" />

      </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snacks"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="#51120E0E"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/dish1" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/dish2" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/dish3" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/dish4" />

      </LinearLayout>
    </HorizontalScrollView>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>